--- a/sass/game.scss
+++ b/sass/game.scss
@@ -7,6 +7,21 @@
   align-items: center;
 }
 
+@keyframes twinkle {
+  0% {
+    opacity: 0;
+  }
+  25% {
+    opacity: 1;
+  }
+  50% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
 .game__timer {
   @include bold-text;
   font-size: 60px;
@@ -15,6 +30,10 @@
   top: 25px;
   left: 50%;
   transform: translateX(-50%);
+
+  &-animate {
+    animation: twinkle 1s;
+  }
 }
 
 .game__lives {
@@ -122,7 +141,7 @@
     border-color: #df4e4e;
   }
 
-  &:active::after {
+  &::after {
     content: "";
     position: absolute;
 
@@ -132,7 +151,15 @@
     left: 0;
     width: 100%;
     height: 100%;
-
+    opacity: 0;
     background-color: rgba(223, 78, 78, 0.4);
   }
+
+  &:active::after {
+    opacity: 1;
+  }
+}
+
+.debug {
+  border: 6px solid yellow;
 }
