bugfix count point, modules and data

--- a/sass/intro.scss
+++ b/sass/intro.scss
@@ -5,17 +5,13 @@
   height: 740px;
   background: url("../img/egg_big.png") no-repeat center;
   background-size: contain;
-
   position: relative;
 }
 
 .intro__asterisk {
   text-align: center;
-
   font-size: 172px;
   color: $main-red-color;
-  cursor: pointer;
-
   position: relative;
   top: 220px;
   left: 30px;
@@ -27,6 +23,13 @@
   &:active {
     color: $link-active-color;
   }
+
+  &-rotate {
+    animation: spin 1s infinite linear;
+    display: block;
+    top: 170px;
+    padding-top: 50px;
+  }
 }
 
 .intro__motto {
@@ -34,4 +37,13 @@
 
   position: absolute;
   bottom: 0;
+}
+
+@keyframes spin {
+ 0% {
+   transform: rotate(0deg);
+ }
+  100% {
+      transform: rotate(360deg);
+ }
 }
